fix: rename exe for windows binary

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -103,7 +103,7 @@ builds:
 
   - id: windows-amd64
     main: ./cmd/zapret-daemon
-    binary: zapret-daemon.exe
+    binary: zapret-daemon
     env:
       - CGO_ENABLED=0
     goos:
