--- a/init/systemd/zapret-daemon.service
+++ b/init/systemd/zapret-daemon.service
@@ -10,12 +10,15 @@ ExecStart=/usr/bin/zapret-daemon serve --config /etc/zapret/config.yaml
 Restart=on-failure
 RestartSec=5s
 
+# Runtime directory
+RuntimeDirectory=zapret
+RuntimeDirectoryMode=0755
+
 # Security settings
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/var/run/zapret
 
 # Capabilities needed for iptables manipulation
 AmbientCapabilities=CAP_NET_ADMIN CAP_NET_RAW
